# betelgeuse

./: .gitignore  LICENSE  Makefile  README.md  dev-requirements.txt  hello.py  pyproject.toml  requirements-dev.txt  ruff.toml
.github/: CODEOWNERS
.github/workflows/: deploy.yml  test.yml
docker/: Dockerfile
intro/: main.py
notion_manager/: config.py
src/betelgeuse/: __init__.py  welcome.py
src/betelgeuse/notion_manager/: client.py
src/nebulae_betelgeuse/: __init__.py  welcome.py
tests/: test_config.py  test_intro.py  test_welcome.py
